# app/Http/Requests/StoreUserRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreUserRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    // public function authorize(): bool
+    // {
+    //     return false;
+    // }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name'              => 'required|string|max:255',
+            'email'             => 'required|email|unique:users,email',
+            'mobile_number'     => 'required|string|max:20',
+            'password'          => 'required|string|min:6|confirmed',
+        ];
+    }
+}
